Ingress-controller/ingress-rules-monitoring+alerting+logging/ingress-rules-logging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: logging
  annotations:
    cert-manager.io/cluster-issuer: "homelab-ca-issuer"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  tls:
  - hosts:
    - opensearch.local.test
    secretName: opensearch-tls
  ingressClassName: nginx
  rules:
    - host: opensearch.local.test
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dashboards-opensearch-dashboards # Cюда вписываем названием СЕРВИСА получить его можно kubectl get svc -n monitoring
              port:
                number: 5601
