Ingress-controller/ingress-rules-monitoring+alerting+logging/ingress-rules-prom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "homelab-ca-issuer"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - prom.local.test
    secretName: prom-tls
  ingressClassName: nginx
  rules:
  - host: prom.local.test
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
         name: kube-prometheus-stack-prometheus
         port:
          number: 9090
